--- a/references.bib
+++ b/references.bib
@@ -54,6 +54,34 @@
   publisher={Springer}
 }
 
+@book{wackernagel2003multivariate,
+  title={Multivariate geostatistics: an introduction with applications},
+  author={Wackernagel, Hans},
+  year={2003},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{mitavs1988general,
+  title={General variational approach to the interpolation problem},
+  author={Mit{\'a}{\v{s}}, L and Mit{\'a}{\v{s}}ov{\'a}, H},
+  journal={Computers \& Mathematics with Applications},
+  volume={16},
+  number={12},
+  pages={983--992},
+  year={1988},
+  publisher={Elsevier}
+}
+
+@article{li2014spatial,
+  title={Spatial interpolation methods applied in the environmental sciences: A review},
+  author={Li, Jin and Heap, Andrew D},
+  journal={Environmental Modelling \& Software},
+  volume={53},
+  pages={173--189},
+  year={2014},
+  publisher={Elsevier}
+}
+
 @article{alonso2020new,
   title={A new approach for understanding urban microclimate by integrating complementary predictors at different scales in regression and machine learning models},
   author={Alonso, Lucille and Renard, Florent},
@@ -453,6 +481,26 @@
   pages={359--366},
   year={1989},
   publisher={Elsevier}
+}
+
+@article{lam1983spatial,
+  title={Spatial interpolation methods: a review},
+  author={Lam, Nina Siu-Ngan},
+  journal={The American Cartographer},
+  volume={10},
+  number={2},
+  pages={129--150},
+  year={1983},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{krige1976review,
+  title={A review of the development of geostatistics in South Africa},
+  author={Krige, DG},
+  booktitle={Advanced Geostatistics in the Mining Industry: Proceedings of the NATO Advanced Study Institute held at the Istituto di Geologia Applicata of the University of Rome, Italy, 13--25 October 1975},
+  pages={279--293},
+  year={1976},
+  organization={Springer}
 }
 
 @book{rey2023geographic,
@@ -890,6 +938,13 @@ Prospects: The 2018 Revision (ST/ESA/SER.A/420). New York: United Nations
   publisher={MDPI}
 }
 
+@book{steffensen1927interpolation,
+  title={Interpolation},
+  author={Steffensen, Johan Frederik},
+  year={1927},
+  publisher={Williams \& Wilkins}
+}
+
 % Datasets
 @article{didan2021modis,
   title={MODIS/Terra vegetation indices 16-day L3 global 1 km SIN grid V061 [data set]},
@@ -954,4 +1009,17 @@ Prospects: The 2018 Revision (ST/ESA/SER.A/420). New York: United Nations
  volume={12},
  pages={2825--2830},
  year={2011}
+}
+
+@software{benjamin_murphy_2022_7008206,
+  author       = {Benjamin Murphy and
+                  Roman Yurchak and
+                  Sebastian Müller},
+  title        = {GeoStat-Framework/PyKrige: v1.7.0},
+  month        = aug,
+  year         = 2022,
+  publisher    = {Zenodo},
+  version      = {v1.7.0},
+  doi          = {10.5281/zenodo.7008206},
+  url          = {https://doi.org/10.5281/zenodo.7008206}
 }
