--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,10 +1,8 @@
 \chapter{Machine Learning-based Interpolation}
 \label{chap:Machine Learning based Interpolation}
-% 10 pages?
 
-% Intro with small motivation why ML is used
 In recent times, the area of machine learning has seen big advancements in terms of model size and complexity. Especially in the area of generative AI, transformer-based neural networks have revolutionised text and image generation. Models such as OpenAI's \textit{ChatGPT}~\cite{openai2023gpt4} or Google's \textit{LaMDA}~\cite{thoppilan2022lamda} have generated significant hype for the possiblity of use of AI\@. Additionally, statements like the universal approximation theorem, which states that a feed-forward network with a single hidden layer containing a finite number of neurons can approximate any continous function~\cite{hornik1989multilayer}, emphasize the potential power of ML models. As a result, the question arises what benefits AI can bring to other areas of application, such as interpolation.\\
-In this chapter, we will discuss the usage of ML in the context of data enrichment via interpolation, more precisely in the context of smart cities and urban air temperature interpolation. The ML models will be compared in Section~\ref{chap:Evaluation} to traditional proven geostatistical model, e.g. Kriging, to outline and discover possible advantages and disadvantages. In general, the idea is to trade the explain- and interpretability of purely statistical-based approaches for model capabilities and accuracy, and the ability to capture more complex (non-linear) dependencies.
+In this chapter, we will discuss the usage of ML in the context of data enrichment via interpolation, more precisely in the context of smart cities and urban air temperature interpolation. The ML models will be compared in Section~\ref{chap:Evaluation} to traditional proven geostatistical model, e.g.\ Kriging, to outline and discover possible advantages and disadvantages. In general, the idea is to trade the explain- and interpretability of purely statistical-based approaches for model capabilities and accuracy, and the ability to capture more complex (non-linear) dependencies.
 Due to the great flexibility of ML models, each model can be fit to completely different use-cases, such as interpolation vs.\ extrapolation or areal interpolation vs.\ interpolation of a single location. The following sections introduce different ML models and discussed their applicability to the use-case of urban air temperature interpolation.
 
 \subsubsection{AI vs. Machine Learning vs. Deep Learning}
@@ -55,7 +53,7 @@ Next to the adaptations that need to be made in order to fit regression algorith
 
 After introducing the requirements for model adaptions and selection, the next step is to introduce and compare the different ML regression algorithms.
 Generally speaking, ML algorithms can be categorised based on many different properties~\cite{sarker2021machine}, such as the type of learning, e.g.\ supervised, unsupervised, semi-supervised or reinforment, or the type of problem they try to solve, e.g.\ classification, regression or clustering. The most important differenciation for this work is to distinguish algorithms based on the type of problem they try to solve. Because we focus on solving interpolation problems, in this work we will only consider algorithms that can be used to solve regression problems, as interpolation is a form of regression.\\
-In regression analysis, the goal is to predict a (continous) target variable $y$ based on a set of input variables $X$, like it is the case for temperature interpolation. Generally speaking, this problem can be classified as a supervised learning problem, therefore the possible algorithm candiates are as follows:
+In regression analysis, the goal is to predict a (continous) target variable $y$ based on a set of input variables $X$, like it is the case for temperature interpolation. Generally speaking, this problem can be classified as a supervised learning problem, therefore possible algorithm candiates contain the following models:
 
 \begin{itemize}
     \item (Multi) Linear Regression (MLR)
@@ -71,11 +69,11 @@ In regression analysis, the goal is to predict a (continous) target variable $y$
     \end{itemize}
 \end{itemize}
 
-Next to these algorithms, there also exist less popular regression algorithms, however due to the limited scope of this work, these are the only algorithms that will be considered.
-Each model has certain benefits but also comes with drawbacks or special assumptions for the input data to the model. First, we will discuss each model and then compare these assumptions with the data coming from the data-layer, to identify suitable models for the task of air temperature interpolation.
-Based on the domain, there already exist proposed best-practices for which algorithms to use for what applications. In the context of smart cities such recommendations exist for topics such as intelligent transportation systems, smart grids, smart city health care and more can be found in \cite{ullah2020applications}, which does not cover interpolation. In the context of air temperature interpolation, regression forests and histogram-based gradient boosting seem to perform better compared to other methods~\cite{apaydin2022evaluation, ho2014mapping}.
+% TODO: explain why not other methods have been used.
 
-% TODO: table with model comparison for quick overview
+Next to these algorithms, there also exist less popular regression algorithms, such as outlined in~\cite{li2014spatial}, however due to the limited scope of this work, we only take a look at ML models listed above, who are implemented in the popular \textit{sklearn} ML library~\cite{scikit-learn}.
+Each model has certain benefits but also comes with drawbacks or special assumptions for the input data to the model. First, we will discuss each model and then compare these assumptions with the data coming from the data-layer, to identify suitable models for the task of air temperature interpolation.
+Based on the domain, there already exist proposed best-practices for which algorithms to use for what applications. In the context of smart cities such recommendations exist for topics such as intelligent transportation systems, smart grids, smart city health care and more can be found in~\cite{ullah2020applications}, which does not cover interpolation. In the context of air temperature interpolation, regression forests and histogram-based gradient boosting seem to be popular choices and perform better compared to other methods~\cite{apaydin2022evaluation, ho2014mapping}.
 
 \section{Comparison of Machine Learning Algorithms}
 \label{sec:comparison ml algorithms}
@@ -170,68 +168,7 @@ Neural networks
 
 % TODO
 
-\section{Feature Engineering}
 
-Next to the model, the most important thing for a machine learning algorithm is the data. Even when the model is perfectly suited for the task at hand, if the data is not suitable, e.g. not enough data, wrong quality, wrongly prepared or formatted etc., the model will not be able to perform well. In the following, we take a look at the data coming from the data-layer and discuss important assumptions such as spatial and temporal autocorrelation. These correlations are important to consider, as they could invalidate models as f.e. Linear Regression~\ref{subsec: linear regression} assumes uncorrelated input variables.\\
-First of all, the data-layer exposes a variety of single data-points for various features for different locations for current and past points in time.
-.Features other than air temperature could further improve the predecition quality, like how~\cite{alonso2020new} suggests that in their study the Normalized Difference Vegetation Index (NDVI) and Modified Normalized Difference Water Index (MNDWI) have a strong impact on their estimation model. Therefore, we discuss how additional features can be included in the model.\\
-This model should then be deloyed inside the \textit{service-layer} and act as a building block for further temperature related research and analysis, as air temperature is an important variable for research in agronomy, meteorology, hydrology, ecology and many other fields of application and could be used for UHI detection in the context of smart cities. The general idea and architecture behind the model should not only be applicable for air temperature, but also other types of output features, even tho potentially significant domain knowledge, like in geostatistical analysis and statistics, is required to select and prepare the input features.\\
-% TODO: summary of the assumptions for the geolocation data
-Generally, there are different types of input features. Firstly, there are discrete measurements that capture the underlying continuous geological process as a specific value at a certain point in time. Examples for this are the measurements from sensors which might be deployed in an urban environment to capture air temperature, humidity and more. Important to note here is the interval, the values are captured. For example, a sensor might capture the air temperature as the average over five minutes, whereas a rain sensor might capture the absolute amount of rain in a specific time interval. Secondly, there are calculated features, which might be derived from the discrete measurements or the location of a measurement. For example, the distance to the closest body of water with a minimum size of $x^2$ meters might be a important information for the air temperature. Lastly, ...\\
-% data from gridded data sources (e.g. affiliation to postal code, district...)
-In the following chapter, we discuss how different types of correlation between measurements can be taken into account to improve the model and gain additional insights into local (meteological) dynamics.
-
-\subsubsection{Spatial Autocorrelation}
-% How different measurements are spatially related inside a time series
-
-As discussed in chapter \ref{chap:Related Work}, there is a dependency between air temperature and other meteological features and the location of the sensors. The closer a sensor is to another sensor, the more correlated the sensor readings should be.
-In geo-statistics, this is called spatial autocorrelation and can be defined traditionally with the Moran's I index~\cite{moran1948interpretation} or the Geary's coefficient~\cite{geary1954contiguity}. 
-% TODO: explain autocorrelation and the implications for ML models
-% model assumptions: no ML algorithm that expects independence between observations
-% feature selection: including all correlated features can lead to overfitting
-% spatial feature engineering: add additional features that encode the spatial relationship between sensors
-% spatial smoothing:
-% spatial aware algorithms: geographically weighted regression (GWR) 
-
-This relationship is however greatly influenced by the type of feature and the location of a sensor. As explained in \cite{oke2006guideline}, the sensor placement in the urban environment is a complex task, as the urban environment is highly dynamic and sensors can be influenced by highly local phenomena, such as air temperarture by heat vents or solar radiation by buildings and surface materials. For this model, we assume that the sensors are placed in a way that the sensor readings are representative for the area they are placed in, even tho in practice this assumption might not hold up, especially for sensors placed by non-experts.\\
-Each sensor reading from the data-layer has a location associated with it in the form of longitute, latitude and altitude (if available). This information can be used to calculate the distance between sensors and subsequently the correlation between sensor readings. However, how exactly the distance between two locations is calculated is not trivial. As the earth is a sphere, the distance between two points on the surface is not a straight line. Depending on the application, different distance metrics can be used. For a small area, such as the city of Hamburg, the euclidean distance could be sufficient, as the curvature of the earth for a small distance is negligible. However, for larger areas the geodesic (harvesine) distance might be more appropriate. In this work, we are focussing on a single city including it's surrounding area, therefore the euclidean distance should have a sufficient accuracy while also simplifing the calculation. As the city of Hamburg does not have big differences in elevation, the altitude is not considered in the distance calculation.\\
-% grid area -> each data point is in a grid cell. Multiple data points can be in the same grid cell. If this is the case, the readings are averaged. Outliers based on the overall mean temperature are removed. -> this is done in the data layer
-The location data can be incorporated into the input data in several ways. The most straight forward way would be to just include the longitude and latitude as input features. Depending on the type of model used, these values might need to be normalised. For example, tree-based models do not require normalisation (cite), as they are not sensitive to the scale of the input features. However, neural networks are very sensitive to the scale of the input features and therefore require normalisation (cite). This approach has the downside, that the distance between sensors is not directly encoded in the input data. If this information is important for the model, it could be included by precalculating the distances between all sensors, however this would increase the complexity of the model especially for large amounts of sensors, as this would result in a quadratic number of input features.\\
-The next approach would be to convert the 
-
-- area n x m grid of data points, each grid cell with n x n size (depending on the resulution), 4D space with location as x and y coordinates (euclidean distance -> but only for smaller areas such as city of Hamburg and suroundings), time as z coordinate and feature values as w coordinate.\\
-
-\subsubsection{Temporal Autocorrelation}
-% How different measurements are temporally related inside a time series
-
-- trends
--> expect normally distributed temperature curve
--> temporal lag (e.g. temperature of yesterday has influence on temperature of today)
-
-Either explicitly model 
-
-\subsubsection{Temporal Cross Correlation}
-% How different time series are related to each other (seasonaility)
-
-% TODO
-\subsubsection{Dealing with Correlation}
-\label{subsec:Dealing with Correlation}
-
-Todo: Techniques to turn correlated variables into uncorrelated ones
-- principal component analysis (PCA)
-- ...\\
-
-variance inflation factor (VIF)\\
--> over 10 = invalid model\cite{montgomery2021introduction}
--> others more moderate with max 3 \cite{zuur2010protocol}
-
-\subsubsection{Dealing with Uncertainty}
-- The model has a lot of uncertainty
-- model uncertainty in input data? (depending on sensor type, sensor age, placement...)
-
-- dealing with bias
-- dealing with variance
--> problem of over-fitting
 
 \subsubsection{Neural Network Models}
 input layer -> hidden layers -> output
@@ -249,30 +186,3 @@ The disadvantages of Multi-layer Perceptron (MLP) include:
 
 
 - random forest regression
-
-\section{Model Selection}
-% Possible model candidates
-
-Question: do we want to model each sensor individually, do we want to model all sensors at once or do we want to model the whole area?
-Do we model stationary and non-stationary sensors differently?
-
-Options:
-- linear regression
-    - needs independent variables -> PCA
-- KNN regression
-    - needs independent variables -> PCA
-- Neural Network
-    - try without independent variables
-    - LSTM -> temporal correlation
-    - CNN -> spatial correlation, temperature map
-
-After listing the selection criteria, the next step is to discuss the possible model candidates and evaluate them based on the selection criteria. The following models are considered:
-
-- linear regression
-- knn regression
-- neural networks
-    - deep learning
-        - sequential model
-        - recurrent neural network (RNN)
-        - long short-term memory (LSTM)
-        - convolutional neural network (CNN)
