--- a/references.bib
+++ b/references.bib
@@ -721,6 +721,45 @@
   publisher={Springer}
 }
 
+@article{yuan2020deep,
+  title={Deep learning in environmental remote sensing: Achievements and challenges},
+  author={Yuan, Qiangqiang and Shen, Huanfeng and Li, Tongwen and Li, Zhiwei and Li, Shuwen and Jiang, Yun and Xu, Hongzhang and Tan, Weiwei and Yang, Qianqian and Wang, Jiwen and others},
+  journal={Remote Sensing of Environment},
+  volume={241},
+  pages={111716},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{runnalls2000dynamics,
+  title={Dynamics and controls of the near-surface heat island of Vancouver, British Columbia},
+  author={Runnalls, KE and Oke, TR},
+  journal={Physical Geography},
+  volume={21},
+  number={4},
+  pages={283--304},
+  year={2000},
+  publisher={Taylor \& Francis}
+}
+
+@article{lecun2015deep,
+  title={Deep learning},
+  author={LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
+  journal={nature},
+  volume={521},
+  number={7553},
+  pages={436--444},
+  year={2015},
+  publisher={Nature Publishing Group UK London}
+}
+
+@book{rosenblatt1957perceptron,
+  title={The perceptron, a perceiving and recognizing automaton Project Para},
+  author={Rosenblatt, Frank},
+  year={1957},
+  publisher={Cornell Aeronautical Laboratory}
+}
+
 United Nations, Department of Economic and Social Affairs, Population Division (2019). World Urbanization
 Prospects: The 2018 Revision (ST/ESA/SER.A/420). New York: United Nations
 
